--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.8-canary.18",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
