--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "fetch": "^1.1.0",
     "minimist": "^1.2.5",
