--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "minimist": "^1.2.5",
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
